--- a/html/sedes.html
+++ b/html/sedes.html
@@ -7,12 +7,15 @@
 	<meta name="description" content="Informacion de sedes de la cafeteria spiti coffe and desserts con mapas">
 	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, sedes, palermo, microcentro, puerto madero">
 	<title>SEDES</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
-<body id="gridSedes">
+<body>
 	<!-- inicio nav -->
 
 	<header>
@@ -51,37 +54,24 @@
 
 	<!-- fin nav -->
 
-	<!-- inicio imagenes de las sedes -->
-	<div id="fotosSj">
-		<img src="../imagenes/sja.png" alt="sala de junta 1">
-		<img src="../imagenes/sjb.png" alt="sala de junta 2">
-		<img src="../imagenes/sjc.png" alt="sala de junta 3">
-		<img src="../imagenes/sjc.png" alt="sala de junta 3">
-		<img src="../imagenes/sjb.png" alt="sala de junta 2">
-		<img src="../imagenes/sja.png" alt="sala de junta 1">
-	</div>
-	<!-- fin imagenes de las sedes -->
-
 	<!-- info general de sedes -->
-	<div id="infoSedes" class="cTxt">
+	<div class="p-5">
 		<h2>NUESTRAS SEDES</h2>
-		<p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-			labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-			dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-			deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-			ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-			ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-			ut aliquip ex ea commodo consequat.</p>
+		<p>En nuestras tiendas te esperan nuestros baristas capacitados para ofrecerte una bebida muy
+			especial. El ambiente cálido y los detalles de nuestros productos elaborados artesanalmente hacen que la
+			experiencia sea única e inigualable. Buscamos incansablemente la calidad y excelencia en todo lo que
+			hacemos,
+			cada proceso, cada pequeño detalle, lo hacemos pensando en ofrecer solo lo mejor y dejar en aquellos que
+			nos visitan, nuestra impronta personal registrada.</p>
 	</div>
 
 	<!-- inicia mapas e info de cada sede -->
-	<div id="infoPalermo" class="cTxt">
+	<div id="infoPalermo" class="mt-2">
 		<h2>SEDE PALERMO</h2>
-		<p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-			labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat, consectetur adipiscing elit.</p>
+		<p>Nuestra primer sede, cuenta con las salas de juntas A, B y C, aptas para distintas actividades,
+			con un estilo oriental, donde predomina la madera, los espacios abiertos y luminosos, creando asi una
+			atmosfera de paz y equilibrio.
+		</p>
 	</div>
 	<div id="mapaPalermo" class="mapas">
 		<iframe
@@ -90,14 +80,11 @@
 			referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 
-
-
-	<div id="infoCentro" class="cTxt">
+	<div id="infoCentro" class="mt-2">
 		<h2>SEDE MICROCENTRO</h2>
-		<p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-			labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat, consectetur adipiscing elit.</p>
+		<p>Nuestra sede más concurrida, cuenta con un diseño industrial y una hermosa vista a la avenida más
+			ancha del mundo. Ideal para tomarse un respiro del trajin del día a día.
+		</p>
 	</div>
 	<div id="mapaCentro" class="mapas">
 		<iframe
@@ -106,14 +93,11 @@
 			referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 
-
-
-	<div id="infoMadero" class="cTxt">
+	<div id="infoMadero" class="mt-2">
 		<h2>SEDE PUERTO MADERO</h2>
-		<p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-			labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat, consectetur adipiscing elit.</p>
+		<p class="txt">Nuestra sede mas reciente y elegida por los universitarios de la zona, cuenta nada más ni
+			nada menos que con 6 salas de juntas, una terraza para actividades recreativas y un patio interno insonoro
+			para descansar y relajarse tomando un rico filtrado al sol.</p>
 	</div>
 	<div id="mapaMadero" class="mapas">
 		<iframe
@@ -123,30 +107,58 @@
 	</div>
 	<!-- fin mapas e info de cada sede -->
 
-	<!-- inicio de pie de pagina // agregar links-->
+	<!-- inicio Footer -->
 	<footer>
-		<div class="cajaFooter">
-			<div class="cajita">
-				<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
-				<a href="#">DIRECCION 1234</a>
+
+		<!-- Redes -->
+		<section class="d-flex justify-content-around p-4 border-bottom mt-2">
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="../imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
-				<a href="#"> 11-1234-5678</a>
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="../imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
-				<a href="#"> ESPITI_COFFEE</a>
+		</section>
+		<!-- Fin Redes -->
+
+		<!-- Info Sedes  -->
+		<section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="#infoPalermo" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="../imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
-				<a href="#"> ESPITI_COFFEE</a>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="#infoCentro" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
 			</div>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="#infoMadero" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
+			</div>
+		</section>
+		<!-- Fin Info Sedes  -->
+
+		<!-- Copyright -->
+		<div class="text-center p-1">
+			© 2022 <b>Spiti</b> - Todos los Derechos Reservados.
 		</div>
-		<div class="copy">
-			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
-		</div>
+		<!-- Copyright -->
+
 	</footer>
+	<!-- Fin Footer -->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
