--- a/html/tienda.html
+++ b/html/tienda.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Tienda de cafeteria spiti coffee and desserts con categorias de cursos cafe en grano o molido productos y gift cards">
-	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, cafe en grano, cafe molido, cafetera, manual, metodo de filtrado">
+	<meta name="description"
+		content="Tienda de cafeteria spiti coffee and desserts con categorias de cursos cafe en grano o molido productos y gift cards">
+	<meta name="keywords"
+		content="cafe, coffee, spiti, dulce, postre, curso cafe, cafe en grano, cafe molido, cafetera, manual, metodo de filtrado">
 	<title>TIENDA</title>
 	<meta name="description" content="Pagina de inicio de spiti coffe and desserts con informacion">
 	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, alquiler oficina">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
+
 <body>
 	<!-- inicio nav -->
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
+	<header>
+		<nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
 			<div class="container-fluid">
 				<a class="navbar-brand " href="../index.html">
-					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
+					<img class="logoCafe" src="../imagenes/logo.webp" alt="">
 				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -45,63 +54,179 @@
 				</div>
 			</div>
 		</nav>
-    </header>
+	</header>
 
 	<!-- fin nav -->
 
 	<div>
-		<section>
-			<img src="../imagenes/cafeex.jpg"alt="Cafetera espresso">
-			<img src="../imagenes/cafefl.jpg"alt="Cafetera v60">
-			<img src="../imagenes/cafemk.jpg"alt="Cafetera moka italiana">
-			<img src="../imagenes/cafepf.jpg"alt="Cafetera embolo">		
-		</section>
-        <section><!--aca estan los id ´cursos´, ´cafe´, ´productos´ y ´giftcards´-->
-            <article>
-                <h3 id="cursos">CURSOS</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-            <article>
-                <h3 id="cafe">CAFE</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            </article>
-            <article>
-                <h3 id="productos">PRODUCTOS</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            </article>
-            <article>
-                <h3 id="giftcards">GIFT CARDS</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            </article>
-        </section>
+		<div>
+			<h3 id="cursos">CURSOS</h3>
+			<p>Aca encontraras todos nuestros cursos.</p>
+			<div class="d-flex justify-content-center  row">
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div>
+			<h3 id="cafe">CAFE</h3>
+			<p>Viajar por el mundo con nuestros distintos origenes.</p>
+			<div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div>
+			<h3 id="productos">PRODUCTOS</h3>
+			<p>Equipate con lo necesario para convertirte en el mejor barista de tu casa</p>
+			<div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div>
+			<h3 id="giftcards">GIFT CARDS</h3>
+			<p>No sabes que regalarte a tu amigui barista? No te preocupes, regalale una gift card para que venga y
+				elija el mejor equipamiento</p>
+			<div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+				<div class="card m-2" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	
-	<!-- inicio de pie de pagina // agregar links-->
+
+	<!-- inicio Footer -->
 	<footer>
-    	<div class="cajaFooter">
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
-	        	<a href="#">DIRECCION 1234</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
-	        	<a href="#" > 11-1234-5678</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
-	        	<a href="#" > ESPITI_COFFEE</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
-	        	<a href="#" > ESPITI_COFFEE</a>
-        	</div>
-        </div>
-		<div class="copy">
-			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
-	    </div>
+
+		<!-- Redes -->
+		<section class="d-flex justify-content-around p-4 border-bottom mt-2">
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
+				</a>
+			</div>
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
+				</a>
+			</div>
+		</section>
+		<!-- Fin Redes -->
+
+		<!-- Info Sedes  -->
+		<section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
+			</div>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="sedes.html#infoCentro" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
+			</div>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
+			</div>
+		</section>
+		<!-- Fin Info Sedes  -->
+
+		<!-- Copyright -->
+		<div class="text-center p-1">
+			© 2022 <b>Spiti</b> - Todos los Derechos Reservados.
+		</div>
+		<!-- Copyright -->
+
 	</footer>
-		
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<!-- Fin Footer -->
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 
 </body>
+
 </html>
