--- a/html/reservas.html
+++ b/html/reservas.html
@@ -4,11 +4,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Pagina de reservas de cafeteria spiti coffee and desserts donde podra elegir el tipo de sala, tiempo y servicios requeridos">
-	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, alquiler de oficinas, servicio de brunch, servicio de lunch, almuerzo empresarial, evento privado">
+	<meta name="description"
+		content="Pagina de reservas de cafeteria spiti coffee and desserts donde podra elegir el tipo de sala, tiempo y servicios requeridos">
+	<meta name="keywords"
+		content="cafe, coffee, spiti, dulce, postre, alquiler de oficinas, servicio de brunch, servicio de lunch, almuerzo empresarial, evento privado">
 	<title>RESERVAS</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
@@ -17,10 +22,10 @@
 	<!-- inicio nav -->
 
 	<header>
-		<nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
-			<div class="container-fluid">
-				<a class="navbar-brand " href="../index.html">
-					<img class="logoCafe" src="../imagenes/logo.webp" alt="">
+		<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
+			<div class="container-fluid d-flex justify-content-around">
+				<a href="../index.html">
+					<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -118,11 +123,7 @@
 		</button>
 	</div>
 
-	<!-- fin carousel 
-<div class="list-group">
-  	<label class="list-group-item">
-    <input class="form-check-input me-1"
-</div>-->
+	<!-- fin carousel -->
 
 	<div>
 		<form class="container bgSwhite">
@@ -228,34 +229,64 @@
 
 	</div>
 
-	<!-- inicio de pie de pagina // agregar links-->
+	<!-- inicio Footer -->
 	<footer>
-		<div class="cajaFooter">
-			<div class="cajita">
-				<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
-				<a href="#">DIRECCION 1234</a>
+
+		<!-- Redes -->
+		<section class="d-flex justify-content-around p-4 border-bottom mt-2">
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="../imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
-				<a href="#"> 11-1234-5678</a>
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="../imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
-				<a href="#"> ESPITI_COFFEE</a>
+		</section>
+		<!-- Fin Redes -->
+
+		<!-- Info Sedes  -->
+		<section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="../imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
-				<a href="#"> ESPITI_COFFEE</a>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="sedes.html#infoCentro" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
 			</div>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
+					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
+					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
+			</div>
+		</section>
+		<!-- Fin Info Sedes  -->
+
+		<!-- Copyright -->
+		<div class="text-center p-1">
+			© 2022 <b>Spiti</b> - Todos los Derechos Reservados.
 		</div>
-		<div class="copy">
-			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
-		</div>
+		<!-- Copyright -->
+
 	</footer>
+	<!-- Fin Footer -->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
+
+	<!--<script src="../js/script.js"></script>-->
 
 </body>
 
