--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Pagina de inicio de spiti coffe and dessert, historia de sus comienzos y con sus compromisos a la comunidad">
+	<meta name="description"
+		content="Pagina de inicio de spiti coffe and dessert, historia de sus comienzos y con sus compromisos a la comunidad">
 	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, alquiler oficina">
 	<title> -ESPITI- </title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -17,7 +21,7 @@
 	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron" id="botonera">
 		<div class="container-fluid d-flex justify-content-around">
 			<a href="index.html">
-				<img class="logoCafe " src="imagenes/logo.webp" alt="">
+				<img class="logoCafe " src="imagenes/logo.webp" alt="logo Spiti">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -62,73 +66,103 @@
 	</section>
 	<!-- fin banner + imagenes de la cafeteria -->
 
-	<!-- inico secciones nosotros + valores  clase .marg-->
+	<!-- inico secciones nosotros + valores  -->
 	<section id="nosotros" class="marg">
 		<h3>Sobre Nosotros</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-			anim id est laborum.</p>
+		<p>Spiti es una cadena de cafeterías de cafe de especialidad y producción artesanal propia, cuya experiencia de
+			marca se vive en sus exclusivos locales con oficinas aptas para co-work.
+			Comenzamos nuestro trabajo con la promesa de una bebida preparada a la perfección, pero es
+			mucho más que eso; en realidad, se trata de relacionarnos con las personas.
+			Soñamos con establecer lugares diseñados con todo el confort y un ambiente distendido para que el cliente
+			pueda disfrutar de la calidad premium de nuestros productos, como para realizar sus tareas de la facultad,
+			realizar sus proyectos u organizar un area de estudio para un final con una rica y caliente taza de café.
+		</p>
 	</section>
 	<section id="valores" class="marg">
 		<h3>Mision</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
+		<p>Crear una cultura de calidez y pertenencia, donde todos se sientan bienvenidos.</p>
 		<h3>Vision</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
-		<h3>Valor</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
+		<p>Establecer un ambiente donde los trabajadores sean capacitados y motivados a desarrollar el más alto
+			potencial de
+			productividad. Con gente orgullosa de sus valores y gente de éxito sin importar el puesto que desempeñe.</p>
 	</section>
 	<!-- fin secciones nosotros + valores -->
 
 	<!-- inico seccion compromisos-->
 	<section id="compromisos" class="marg">
 		<h3>Compromisos</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eufugiat
-			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-			anim id est laborum.</p>
+		<p>Estamos comprometidos a convertirnos en recursos positivos: dar más de lo que tomamos del planeta.
+			Almacenaremos más carbono del que emitimos, eliminaremos los desechos y conservaremos y repondremos más agua
+			dulce de la que usamos.</p>
 		<img src="imagenes/proceso1.png" alt="Proceso de seleccion de cafe">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-			anim id est laborum.</p>
+		<p>Nuestro café, proveniente de fincas seleccionadas, tostado por nosotros mismos y servido en bebidas calientes
+			o frías por nuestros baristas certificados internacionalmente por la SCA (Speciality Coffee Association).
+			Ademas, toda la carta desarrollada por nuestra Chef, mantiene la misma idea detrás: Encontramos los mejores
+			ingredientes para realizar esas recetas que hemos soñado, preparado y perfeccionado para poder dejar lo mas
+			rico pero tambien aquello que es único. Estamos en cada proceso de preparación sobre todo lo que ofrecemos.
+		</p>
 		<img src="imagenes/proceso2.png" alt="Proceso de seleccion de cafe">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-			anim id est laborum.</p>
+		<p>Es nuestro compromiso realizar negocios de manera que contribuyamos positivamente con todos y con nuestro
+			planeta, desde la manera en la que compramos el café y disminuimos el impacto en nuestro ambiente, hasta la
+			forma en la que nos involucramos con nuestras comunidades Y gracias a que estás con nosotros, vos también
+			formas
+			parte de Spipti.</p>
 		<img src="imagenes/proceso3.png" alt="Proceso de seleccion de cafe">
 	</section>
 	<!-- fin seccion compromisos-->
 
-	<!-- inicio de pie de pagina // agregar links-->
+	<!-- inicio Footer -->
 	<footer>
-		<div class="cajaFooter">
-			<div class="cajita">
-				<img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
-				<a href="#">DIRECCION 1234</a>
+
+		<!-- Redes -->
+		<section class="d-flex justify-content-around p-4 border-bottom mt-2">
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
-				<a href="#"> 11-1234-5678</a>
+			<div>
+				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
+					<img src="imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
-				<a href="#"> ESPITI_COFFEE</a>
+		</section>
+		<!-- Fin Redes -->
+
+		<!-- Info Sedes  -->
+		<section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="html/sedes.html#infoPalermo" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
+					<p><img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
+					<p><img src="imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
 			</div>
-			<div class="cajita">
-				<img src="imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
-				<a href="#"> ESPITI_COFFEE</a>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="html/sedes.html#infoCentro" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
+					<p><img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
+					<p><img src="imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
 			</div>
+			<div class="col-sm-12 col-md-4 col-lg-4">
+				<a href="html/sedes.html#infoMadero" class="text-decoration-none text-reset">
+					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
+					<p><img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
+					<p><img src="imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+				</a>
+			</div>
+		</section>
+		<!-- Fin Info Sedes  -->
+
+		<!-- Copyright -->
+		<div class="text-center p-1">
+			© 2022 <b>Spiti</b> - Todos los Derechos Reservados.
 		</div>
-		<div class="copy">
-			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
-		</div>
+		<!-- Copyright -->
+
 	</footer>
+	<!-- Fin Footer -->
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
