--- a/html/reservas.html
+++ b/html/reservas.html
@@ -21,39 +21,38 @@
 
 	<!-- inicio nav -->
 
-	<header>
-		<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
-			<div class="container-fluid d-flex justify-content-around">
-				<a href="../index.html">
-					<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-					aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link" href="../index.html">Espiti</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/sedes.html">Sedes</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/menu.html">Menu</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/tienda.html">Tienda</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/reservas.html">Reservas</a>
-						</li>
-					</ul>
-				</div>
+
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
+		<div class="container-fluid d-flex justify-content-around">
+			<a href="../index.html">
+				<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" href="../index.html">Espiti</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/sedes.html">Sedes</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/menu.html">Menu</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/tienda.html">Tienda</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/reservas.html">Reservas</a>
+					</li>
+				</ul>
 			</div>
-		</nav>
-	</header>
+		</div>
+	</nav>
 
 	<!-- fin nav -->
 
@@ -248,22 +247,22 @@
 		<!-- Fin Redes -->
 
 		<!-- Info Sedes  -->
-		<section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
-			<div class="col-sm-12 col-md-4 col-lg-4">
+		<section class="d-flex justify-content-around m-2 flex-wrap flex-sm-wrap-reverse">
+			<div class="p-4">
 				<a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
 					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
 					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
 				</a>
 			</div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
+			<div class="p-4">
 				<a href="sedes.html#infoCentro" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
 					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
 					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
 				</a>
 			</div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
+			<div class="p-4">
 				<a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
 					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
