--- a/html/tienda.html
+++ b/html/tienda.html
@@ -22,39 +22,39 @@
 <body>
 	<!-- inicio nav -->
 
-	<header>
-		<nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
-			<div class="container-fluid">
-				<a class="navbar-brand " href="../index.html">
-					<img class="logoCafe" src="../imagenes/logo.webp" alt="">
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-					aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link" href="../index.html">Espiti</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/sedes.html">Sedes</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/menu.html">Menu</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/tienda.html">Tienda</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/reservas.html">Reservas</a>
-						</li>
-					</ul>
-				</div>
+
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
+		<div class="container-fluid d-flex justify-content-around">
+			<a href="../index.html">
+				<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" href="../index.html">Espiti</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/sedes.html">Sedes</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/menu.html">Menu</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/tienda.html">Tienda</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../html/reservas.html">Reservas</a>
+					</li>
+				</ul>
 			</div>
-		</nav>
-	</header>
+		</div>
+	</nav>
+
 
 	<!-- fin nav -->
 
@@ -62,26 +62,23 @@
 		<div>
 			<h3 id="cursos">CURSOS</h3>
 			<p>Aca encontraras todos nuestros cursos.</p>
-			<div class="d-flex justify-content-center  row">
+			<div class="d-flex justify-content-center flex-wrap ">
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafefl.jpg" alt="Curso de filtrados">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Curso de filtrados. Nivel inicial.</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafes.png" alt="Curso de tostado">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Curso de tostado de granos. Nivel avanzado.</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/pubCoffeMachine.png" alt="Curso de espresso">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Curso de espresso. Nivel intermedio.</p>
 					</div>
 				</div>
 			</div>
@@ -89,26 +86,23 @@
 		<div>
 			<h3 id="cafe">CAFE</h3>
 			<p>Viajar por el mundo con nuestros distintos origenes.</p>
-			<div>
+			<div class="d-flex justify-content-center flex-wrap ">
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafehoney.webp" alt="Cafe Honey">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Cafe Honey para tostar.</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafelavado.webp" alt="Cafe Lavado">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Cafe Lavado tostado medio-claro.</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafeverde.png" alt="Cafe verde">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Cafe verde para tostar.</p>
 					</div>
 				</div>
 			</div>
@@ -116,26 +110,23 @@
 		<div>
 			<h3 id="productos">PRODUCTOS</h3>
 			<p>Equipate con lo necesario para convertirte en el mejor barista de tu casa</p>
-			<div>
+			<div class="d-flex justify-content-center flex-wrap ">
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafemk.jpg" alt="Cafetera moka">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Cafetera Moka.</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafeex.jpg" alt="Cafe espresso">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Cafetera espresso.</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/cafepf.jpg" alt="Cafetera de embolo">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Cafetera de embolo.</p>
 					</div>
 				</div>
 			</div>
@@ -144,26 +135,23 @@
 			<h3 id="giftcards">GIFT CARDS</h3>
 			<p>No sabes que regalarte a tu amigui barista? No te preocupes, regalale una gift card para que venga y
 				elija el mejor equipamiento</p>
-			<div>
+			<div class="d-flex justify-content-center flex-wrap flex-sm-wrap-reverse ">
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 500">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Gift card de $500</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 1000">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Gift card de $1000</p>
 					</div>
 				</div>
 				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 2000">
 					<div class="card-body">
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-							the card's content.</p>
+						<p class="card-text">Gift card de $2000</p>
 					</div>
 				</div>
 			</div>
@@ -189,7 +177,7 @@
 		<!-- Fin Redes -->
 
 		<!-- Info Sedes  -->
-		<section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
+		<section class="d-flex justify-content-around m-2 flex-sm-wrap-reverse">
 			<div class="col-sm-12 col-md-4 col-lg-4">
 				<a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
