--- a/index.html
+++ b/index.html
@@ -132,22 +132,22 @@
 		<!-- Fin Redes -->
 
 		<!-- Info Sedes  -->
-		<section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
-			<div class="col-sm-12 col-md-4 col-lg-4">
+		<section class="d-flex justify-content-around m-2 flex-wrap flex-sm-wrap-reverse">
+			<div class="p-4">
 				<a href="html/sedes.html#infoPalermo" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
 					<p><img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
 					<p><img src="imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
 				</a>
 			</div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
+			<div class="p-4">
 				<a href="html/sedes.html#infoCentro" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
 					<p><img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
 					<p><img src="imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
 				</a>
 			</div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
+			<div class="p-4">
 				<a href="html/sedes.html#infoMadero" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
 					<p><img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
