--- a/html/menu.html
+++ b/html/menu.html
@@ -2,147 +2,269 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Menu de cafeteria spiti coffee and desserts con opciones dulces, saladas, para almorzar, compartir, regalar, opciones apto celiaco, vegetarianoso o veganos">
-	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, cafe, cafe molido, cafetera, metodo de filtrado, espresso, capuccino. flat white, brunch, lunch, celiaco, vegano, vegetariano">
-	<title>MENU</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Menu de cafeteria spiti coffee and desserts con opciones dulces, saladas, para almorzar, compartir, regalar, opciones apto celiaco, vegetarianoso o veganos">
+    <meta name="keywords"
+        content="cafe, coffee, spiti, dulce, postre, cafe, cafe molido, cafetera, metodo de filtrado, espresso, capuccino. flat white, brunch, lunch, celiaco, vegano, vegetariano">
+    <title>MENU</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
-	<!-- inicio nav -->
+    <!-- inicio nav -->
 
 
-        <nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
-			<div class="container-fluid">
-				<a class="navbar-brand " href="../index.html">
-					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link" href="../index.html">Espiti</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/sedes.html">Sedes</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/menu.html">Menu</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/tienda.html">Tienda</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="../html/reservas.html">Reservas</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
+    <nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
+        <div class="container-fluid">
+            <a class="navbar-brand " href="../index.html">
+                <img class="logoCafe" src="../imagenes/logo.webp" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Espiti</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../html/sedes.html">Sedes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../html/menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../html/tienda.html">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../html/reservas.html">Reservas</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-	<!-- fin nav -->
+    <!-- fin nav -->
     <!-- inicio del menu -->
     <section>
-        <div id="menu">
-            <!--             agregar cards
-
-            <div class="card border-success mb-3" style="max-width: 18rem;">
-                <div class="card-header bg-transparent border-success">Header</div>
-                <div class="card-body text-success">
-                  <h5 class="card-title">Success card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-                <div class="card-footer bg-transparent border-success">Footer</div>
-              </div>
-            -->
+        <div>
             <h2>MENU</h2>
         </div>
-        <div id="promos">
+        <div>
             <h3>PROMOS</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div id="box">
+            <p>Promos del mes. Validas de 10 a 13hs, y de 18 a 21hs.</p>
+            <div class="d-flex justify-content-center flex-wrap">
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de filtrados">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con dos medialunas.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de tostado">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con porcion de torta del dia.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de espresso">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con tostado.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
             <h3>BOX REGALO</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p>Lo mejor de nuestro menu para llevar y regalar. </p>
+            <div class="d-flex justify-content-center flex-wrap">
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de filtrados">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con dos medialunas.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de tostado">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con porcion de torta del dia.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de espresso">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con tostado.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="bebidas">
+        <div>
             <h3>BEBIDAS</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p>Bebidas a base de espresso y batidos frios de frutas naturales</p>
+            <div class="d-flex justify-content-center flex-wrap">
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de filtrados">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con dos medialunas.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de tostado">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con porcion de torta del dia.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de espresso">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con tostado.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="picar">
+        <div>
             <h3>PARA PICAR</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p>Opciones dulces y saladas para picar.</p>
+            <div class="d-flex justify-content-center flex-wrap">
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de filtrados">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con dos medialunas.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de tostado">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con porcion de torta del dia.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de espresso">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con tostado.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="brunch">
+        <div>
             <h3>BRUNCH</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p>Ideal para compartir de a dos. </p>
+            <div class="d-flex justify-content-center flex-wrap">
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de filtrados">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con dos medialunas.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de tostado">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con porcion de torta del dia.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de espresso">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con tostado.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="lunch">
+        <div>
             <h3>LUNCH</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p>Apto para todos los paladares, incluye un vaso de agua del dia, plato principal y
+                postre.
+            </p>
+            <div class="d-flex justify-content-center flex-wrap">
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de filtrados">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con dos medialunas.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/budines.png" alt="Curso de tostado">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con porcion de torta del dia.</p>
+                    </div>
+                </div>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="card-img-top" src="../imagenes/cd.png" alt="Curso de espresso">
+                    <div class="card-body">
+                        <p class="card-text">Cafe con tostado.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- fin del menu -->
 
-<!-- inicio Footer -->
-<footer>
+    <!-- inicio Footer -->
+    <footer>
 
-    <!-- Redes -->
-    <section class="d-flex justify-content-around p-4 border-bottom mt-2">
-        <div>
-            <a href="" class="me-4 text-decoration-none text-reset fw-bold">
-                <img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
-            </a>
-        </div>
-        <div>
-            <a href="" class="me-4 text-decoration-none text-reset fw-bold">
-                <img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
-            </a>
-        </div>
-    </section>
-    <!-- Fin Redes -->
+        <!-- Redes -->
+        <section class="d-flex justify-content-around p-4 border-bottom mt-2 flex-wrap flex-sm-wrap-reverse">
+            <div>
+                <a href="" class="me-4 text-decoration-none text-reset fw-bold">
+                    <img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
+                </a>
+            </div>
+            <div>
+                <a href="" class="me-4 text-decoration-none text-reset fw-bold">
+                    <img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
+                </a>
+            </div>
+        </section>
+        <!-- Fin Redes -->
 
-    <!-- Info Sedes  -->
-    <section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
-        <div class="col-sm-12 col-md-4 col-lg-4">
-            <a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
-                <h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
-                <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
-                <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-4">
-            <a href="sedes.html#infoCentro" class="text-decoration-none text-reset">
-                <h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
-                <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
-                <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-4">
-            <a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
-                <h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
-                <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
-                <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
-            </a>
-        </div>
-    </section>
-    <!-- Fin Info Sedes  -->
+        <!-- Info Sedes  -->
+        <section class="d-flex justify-content-around m-2 flex-wrap flex-sm-wrap-reverse">
+            <div class="p-4">
+                <a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
+                    <h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
+                    <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
+                    <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+                </a>
+            </div>
+            <div class="p-4">
+                <a href="sedes.html#infoCentro" class="text-decoration-none text-reset">
+                    <h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
+                    <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
+                    <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+                </a>
+            </div>
+            <div class="p-4">
+                <a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
+                    <h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
+                    <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
+                    <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+                </a>
+            </div>
+        </section>
+        <!-- Fin Info Sedes  -->
 
-    <!-- Copyright -->
-    <div class="text-center p-1">
-        © 2022 <b>Spiti</b> - Todos los Derechos Reservados.
-    </div>
-    <!-- Copyright -->
+        <!-- Copyright -->
+        <div class="text-center p-1">
+            © 2022 <b>Spiti</b> - Todos los Derechos Reservados.
+        </div>
+        <!-- Copyright -->
 
-</footer>
-<!-- Fin Footer -->
-    	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </footer>
+    <!-- Fin Footer -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
