--- a/html/reservas.html
+++ b/html/reservas.html
@@ -15,6 +15,7 @@
 		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" href="../js/cdm.js">
 </head>
 
 <body>
@@ -284,6 +285,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
+	<script src="../js/cdm.js"></script>
 
 	<!--<script src="../js/script.js"></script>-->
 
